--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,11 +27,11 @@ version: '3.3'
 
 services:
   web:
-    build: ./app
+    build: .
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - ./app/:/usr/src/app/
+      - .:/code
     ports:
       - 8000:8000
     env_file:
-      - ./.env.dev
+      - .env.dev
