--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,3 @@
 DEBUG=1
 SECRET_KEY=foo
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+DJANGO_ALLOWED_HOSTS=localhost ec2-13-233-129-59.ap-south-1.compute.amazonaws.com 127.0.0.1 [::1]
