--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,3 +35,17 @@ services:
       - 8005:8005
     env_file:
       - .env.dev
+    depends_on:
+      - db
+
+  db:
+    image: postgres:13.0-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_USER=hello_django
+      - POSTGRES_PASSWORD=hello_django
+      - POSTGRES_DB=hello_django_dev
+
+volumes:
+  postgres_data:
