--- a/.env.prod
+++ b/.env.prod
@@ -1,8 +1,8 @@
-DEBUG=1
-SECRET_KEY=foo
+DEBUG=0
+SECRET_KEY=change_me
 DJANGO_ALLOWED_HOSTS=localhost ec2-13-233-129-59.ap-south-1.compute.amazonaws.com 127.0.0.1 [::1]
 SQL_ENGINE=django.db.backends.postgresql
-SQL_DATABASE=hello_django_dev
+SQL_DATABASE=hello_django_prod
 SQL_USER=hello_django
 SQL_PASSWORD=hello_django
 SQL_HOST=db
