--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,21 @@
-# ersion: "3.9"
-
-# services:
-#   db:
-#     image: postgres
-#     volumes:
-#       - ./data/db:/var/lib/postgresql/data
-#     environment:
-#       - POSTGRES_NAME=postgres
-#       - POSTGRES_USER=postgres
-#       - POSTGRES_PASSWORD=postgres
-#   web:
-#     build: .
-#     command: python manage.py runserver 0.0.0.0:8000
-#     volumes:
-#       - .:/code
-#     ports:
-#       - "8000:8000"
-#     environment:
-#       - POSTGRES_NAME=postgres
-#       - POSTGRES_USER=postgres
-#       - POSTGRES_PASSWORD=postgres
-#     depends_on:
-#       - db
-
 version: '3.3'
 
 services:
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8005
-    volumes:
-      - .:/code
+    command: gunicorn hello_django.wsgi:application --bind 0.0.0.0:8005
     ports:
       - 8005:8005
     env_file:
-      - .env.dev
+      - ./.env.prod
     depends_on:
       - db
-
   db:
     image: postgres:13.0-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    environment:
-      - POSTGRES_USER=hello_django
-      - POSTGRES_PASSWORD=hello_django
-      - POSTGRES_DB=hello_django_dev
+    env_file:
+      - ./.env.prod.db
 
 volumes:
   postgres_data:
