--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -6,7 +6,7 @@
 FROM python:3.9.6-alpine as builder
 
 # set work directory
-WORKDIR /code
+WORKDIR /app
 
 # set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
@@ -24,7 +24,7 @@ RUN flake8 --ignore=E501,F401 .
 
 # install dependencies
 COPY ./requirements.txt .
-RUN pip wheel --no-cache-dir --no-deps --wheel-dir /code/wheels -r requirements.txt
+RUN pip wheel --no-cache-dir --no-deps --wheel-dir /app/wheels -r requirements.txt
 # RUN pip install -r requirements.txt
 
 #########
@@ -35,21 +35,21 @@ RUN pip wheel --no-cache-dir --no-deps --wheel-dir /code/wheels -r requirements.
 FROM python:3.9.6-alpine
 
 # create directory for the app user
-RUN mkdir -p /home/code
+RUN mkdir -p /home/app
 
 # create the app user
 RUN addgroup -S app && adduser -S app -G app
 
 # create the appropriate directories
-ENV HOME=/home/ubuntu/pyapps/dj_apps/docker_djprj1
-ENV APP_HOME=/home/ubuntu/pyapps/dj_apps/docker_djprj1/web
+ENV HOME=/home/app
+ENV APP_HOME=/home/app/web
 RUN mkdir $APP_HOME
 WORKDIR $APP_HOME
 
 # install dependencies
 RUN apk update && apk add libpq
-COPY --from=builder /code/wheels /wheels
-COPY --from=builder /code/requirements.txt .
+COPY --from=builder /app/wheels /wheels
+COPY --from=builder /app/requirements.txt .
 RUN pip install --no-cache /wheels/*
 
 # copy entrypoint.prod.sh
@@ -67,4 +67,4 @@ RUN chown -R app:app $APP_HOME
 USER code
 
 # run entrypoint.prod.sh
-ENTRYPOINT ["/home/code/web/entrypoint.prod.sh"]
+ENTRYPOINT ["/app/web/entrypoint.prod.sh"]
